--- a/Login/login.html
+++ b/Login/login.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <title>
+      Login Page
+    </title>
+    <!-- Bootstrap File -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -38,44 +42,62 @@
 
             <!-- Login Container -->
             <div class="col-sm-12 col-md-6 col-lg-6 my-5 pt-3">
-              <h3 class="text-center">Sign In</h3>
-              <!-- Username -->
-              <div class="row">
-                <div
-                  class="col-sm-12 col-md-6 col-lg-6 offset-md-3 offset-lg-3"
-                >
-                  <div class="form-group">
-                    <label for="Username">Username</label>
-                    <input type="text" class="form-control" id="Username" />
+              <!-- Login Form -->
+              <form>
+                <h3 class="text-center">Sign In</h3>
+                <!-- Username -->
+                <div class="row">
+                  <div
+                    class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3"
+                  >
+                    <div class="form-group">
+                      <label for="Username">Username</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="username"
+                        id="Username"
+                      />
+                    </div>
                   </div>
                 </div>
-              </div>
-              <!-- Password -->
-              <div class="row">
-                <div
-                  class="col-sm-12 col-md-6 col-lg-6 offset-md-3 offset-lg-3"
-                >
-                  <div class="form-group">
-                    <label for="Password">Password</label>
-                    <input type="password" class="form-control" id="Password" />
+                <!-- Password -->
+                <div class="row">
+                  <div
+                    class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3"
+                  >
+                    <div class="form-group">
+                      <label for="Password">Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="password"
+                        id="Password"
+                      />
+                    </div>
                   </div>
                 </div>
-              </div>
-              <!-- Submit Button -->
-              <div class="row mt-3">
-                <div
-                  class="col-sm-12 col-md-6 col-lg-6 offset-md-3 offset-lg-3"
-                >
-                  <div class="text-center">
-                    <button
-                      type="button"
-                      class="btn btn-secondary btn-block btn-md rounded-pill"
-                    >
-                      Submit
-                    </button>
+                <!-- Submit Button -->
+                <div class="row mt-3">
+                  <div
+                    class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3"
+                  >
+                    <div class="text-center">
+                      <button
+                        type="submit"
+                        class="btn btn-secondary btn-block btn-md rounded-pill"
+                      >
+                        Submit
+                      </button>
+                    </div>
                   </div>
                 </div>
-              </div>
+              </form>
+              <!-- Login Error Container -->
+              <div
+                id="loginErrorContainer"
+                class="h4 text-center text-danger mt-2"
+              ></div>
             </div>
           </div>
         </div>
