--- a/Login/login.html
+++ b/Login/login.html
@@ -19,9 +19,9 @@
       <nav
         class="navbar navbar-expand-lg navbar-light justify-content-around bg-white shadow-sm p-3 bg-white rounded"
       >
-        <div class="navbar-nav h5">
-          <a class="nav-item nav-link font-weight-bold text-dark px-4" href="#"
-            >Work.com</a
+        <div class="navbar-nav h2">
+          <a class="nav-item nav-link font-weight-light text-dark px-4" href="#"
+            >W O R K</a
           >
         </div>
       </nav>
@@ -32,7 +32,7 @@
           <!-- Row -->
           <div class="row h-100">
             <!-- Column -->
-            <div class="col-sm-12 col-md-6 col-lg-6 bg-primary text-white">
+            <div class="col-sm-12 col-md-6 col-lg-6 bg-danger text-white">
               <h2 class="mt-5 pt-5 mb-4">Job relocation made easy.</h2>
               <h3 class="font-weight-light">
                 Explore countries and find tech jobs with verified relocation
@@ -44,7 +44,7 @@
             <div class="col-sm-12 col-md-6 col-lg-6 my-5 pt-3">
               <!-- Login Form -->
               <form>
-                <h3 class="text-center">Sign In</h3>
+                <h3 class="text-center font-weight-light">Sign In</h3>
                 <!-- Username -->
                 <div class="row">
                   <div
