--- a/Login/login.html
+++ b/Login/login.html
@@ -1,126 +1,93 @@
 <html>
-  <head>
-    <title>
-      Login Page
-    </title>
-    <!-- Bootstrap File -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
-    <!-- Css File -->
-    <link rel="stylesheet" href="login.css" />
-  </head>
-  <body>
-    <div>
-      <!-- Navbar Header -->
-      <nav
-        class="navbar navbar-expand-lg navbar-light justify-content-around bg-white shadow-sm p-3 bg-white rounded"
-      >
-        <div class="navbar-nav h2">
-          <a class="nav-item nav-link font-weight-light text-dark px-4" href="#"
-            >W O R K</a
-          >
-        </div>
-      </nav>
-      <!-- Fluid Container -->
-      <div class="container-fluid mt-0">
-        <!-- Welcome Container -->
-        <div class="welcomeContainer">
-          <!-- Row -->
-          <div class="row h-100">
-            <!-- Column -->
-            <div class="col-sm-12 col-md-6 col-lg-6 bg-danger text-white">
-              <h2 class="mt-5 pt-5 mb-4">Job relocation made easy.</h2>
-              <h3 class="font-weight-light">
-                Explore countries and find tech jobs with verified relocation
-                packages
-              </h3>
-            </div>
 
-            <!-- Login Container -->
-            <div class="col-sm-12 col-md-6 col-lg-6 my-5 pt-3">
-              <!-- Login Form -->
-              <form>
-                <h3 class="text-center font-weight-light">Sign In</h3>
-                <!-- Username -->
-                <div class="row">
-                  <div
-                    class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3"
-                  >
-                    <div class="form-group">
-                      <label for="Username">Username</label>
-                      <input
-                        type="text"
-                        class="form-control"
-                        name="username"
-                        id="Username"
-                      />
-                    </div>
+<head>
+  <title>
+    Login Page
+  </title>
+  <!-- Bootstrap File -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+  <!-- Css File -->
+  <link rel="stylesheet" href="login.css" />
+</head>
+
+<body>
+  <div>
+    <!-- Navbar Header -->
+    <nav class="navbar navbar-expand-lg navbar-light justify-content-around bg-white shadow-sm p-3 bg-white rounded">
+      <div class="navbar-nav h2">
+        <a class="nav-item nav-link font-weight-light text-dark px-4" href="#">W O R K</a>
+      </div>
+    </nav>
+    <!-- Fluid Container -->
+    <div class="container-fluid mt-0">
+      <!-- Welcome Container -->
+      <div class="welcomeContainer">
+        <!-- Row -->
+        <div class="row h-100">
+          <!-- Column -->
+          <div class="col-sm-12 col-md-6 col-lg-6 bg-danger text-white">
+            <h2 class="mt-5 pt-5 mb-4">Job relocation made easy.</h2>
+            <h3 class="font-weight-light">
+              Explore countries and find tech jobs with verified relocation
+              packages
+            </h3>
+          </div>
+
+          <!-- Login Container -->
+          <div class="col-sm-12 col-md-6 col-lg-6 my-5 pt-3">
+            <!-- Login Form -->
+            <form>
+              <h3 class="text-center font-weight-light">Sign In</h3>
+              <!-- Username -->
+              <div class="row">
+                <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
+                  <div class="form-group">
+                    <label for="Username">Username</label>
+                    <input type="text" class="form-control" name="username" id="Username" />
                   </div>
                 </div>
-                <!-- Password -->
-                <div class="row">
-                  <div
-                    class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3"
-                  >
-                    <div class="form-group">
-                      <label for="Password">Password</label>
-                      <input
-                        type="password"
-                        class="form-control"
-                        name="password"
-                        id="Password"
-                      />
-                    </div>
+              </div>
+              <!-- Password -->
+              <div class="row">
+                <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
+                  <div class="form-group">
+                    <label for="Password">Password</label>
+                    <input type="password" class="form-control" name="password" id="Password" />
                   </div>
                 </div>
-                <!-- Submit Button -->
-                <div class="row mt-3">
-                  <div
-                    class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3"
-                  >
-                    <div class="text-center">
-                      <button
-                        type="submit"
-                        class="btn btn-secondary btn-block btn-md rounded-pill"
-                      >
-                        Submit
-                      </button>
-                    </div>
+              </div>
+              <!-- Submit Button -->
+              <div class="row mt-3">
+                <div class="col-sm-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
+                  <div class="text-center">
+                    <button type="submit" class="btn btn-secondary btn-block btn-md rounded-pill">
+                      Submit
+                    </button>
                   </div>
                 </div>
-              </form>
-              <!-- Login Error Container -->
-              <div
-                id="loginErrorContainer"
-                class="h4 text-center text-danger mt-2"
-              ></div>
-            </div>
+              </div>
+            </form>
+            <!-- Login Error Container -->
+            <div id="loginErrorContainer" class="h4 text-center text-danger mt-2"></div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Bootsrap Files -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Javscript File -->
-    <script src="login.js" type="text/javascript"></script>
-  </body>
+  <!-- Bootsrap Files -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
+  <!-- Javscript File -->
+  <script src="login.js" type="text/javascript"></script>
+</body>
+
 </html>
