--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -28,7 +28,7 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup2">
                 <div class="navbar-nav ml-auto h5 font-weight-light">
-                    <a class="nav-item nav-link text-dark px-4" href="../Admin/admin.html">Admin</a>
+                    <a class="nav-item nav-link text-dark px-4" href="#">Admin</a>
                     <a class="nav-item nav-link text-dark px-4" href="#">Recruiter</a>
                     <a class="nav-item nav-link font-weight-light text-white bg-danger rounded mr-4 px-5"
                         href="../Home/home.html">Logout</a>
@@ -37,48 +37,15 @@
         </nav>
         <!-- Container -->
         <div class="container">
-            <!-- Form -->
-            <form>
-                <!-- Row -->
-                <div class="row">
-                    <!-- Column -->
-                    <div class="col-sm-12 col-md-12 col-lg-12">
-                        <h3 class="text-dark">One Search, Millions of Jobs</h3>
-                    </div>
-                </div>
-                <!-- Row -->
-                <div class="row">
-                    <!-- Column -->
-                    <div class="col-sm-12 col-md-5 col-lg-5">
-                        <!-- Description -->
-                        <div class="form-group">
-                            <label for="description">Description</label>
-                            <input type="text" name="description" class="form-control">
-                        </div>
-                    </div>
-                    <!-- Column -->
-                    <div class="col-sm-12 col-md-5 col-lg-5">
-                        <!-- Location -->
-                        <div class="form-group">
-                            <label for="location">Location</label>
-                            <input type="text" name="location" class="form-control">
-                        </div>
-                    </div>
-                    <!-- Column -->
-                    <div class="col-sm-12 col-md-2 col-lg-2">
-                        <!-- Sumbit Button -->
-                        <button type="submit" class="btn btn-lg btn-primary mt-4">Search</button>
-                    </div>
-                </div>
-            </form>
-            <!-- Search Results Container -->
-            <div id="searchResultsContainer"></div>
+            <h1 class="text-center">Welcome Admin</h1>
+            <!-- Admin Table -->
+            <table class="table" id="adminTable">
+
+            </table>
         </div>
-
-
     </div>
     <!-- Javascript File -->
-    <script type="text/javascript" src="dashboard.js"></script>
+    <script type="text/javascript" src="admin.js"></script>
     <!-- Bootsrap Files -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
