--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <title>
-        Dashboard Page
+        Admin Page
     </title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/54ad569e59.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
         <!-- Navbar Header -->
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm p-3 mb-5 bg-white rounded">
-            <a class="navbar-brand text-danger" href="#">
+            <a class="navbar-brand text-danger" href="../Dashboard/dashboard.html">
                 <h3>W O R K</h3>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup2"
