--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -10,6 +10,12 @@
     </title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/54ad569e59.js" crossorigin="anonymous"></script>
+    <!-- Css -->
+    <style>
+        .smallFont {
+    font-size: 12px;
+}
+    </style>
 </head>
 
 <body>
